home page style 2

--- a/csv-simple-parser/src/main/resources/static/style.css
+++ b/csv-simple-parser/src/main/resources/static/style.css
@@ -9,6 +9,16 @@ h1{
 	font: Arial;
 	font-size: 140px;
 }
+
+.example-1 .form-group{padding:1em;margin:1em}
+.example-1 input[type=file]{outline:0;opacity:0}
+.example-1 .label{width:120px;border:2px dashed grey;border-radius:5px;display:block;padding:1.2em;transition:border 300ms ease;cursor:pointer;text-align:center}
+.example-1 .label i{display:block;font-size:42px;padding-bottom:16px}
+.example-1 .label i,.example-1 .label .title{color:grey;transition:200ms color}
+.example-1 .label:hover{border:2px solid #000}
+.example-1 .label:hover i,.example-1 .label:hover .title{color:#000}
+
+/*
 #uploadChoise {
 	margin-left: 40%;
 	width: 10%;
@@ -24,3 +34,4 @@ h1{
 	border-color: white;
 	border-width: 1px;
 }
+*/
