--- a/csv-simple-parser/src/main/resources/templates/home.html
+++ b/csv-simple-parser/src/main/resources/templates/home.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org">
-	<head>
-		<title>CSV parser</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<link rel="stylesheet" th:href="@{/style.css}" />
-	</head>
-	<body>
-		<h1>Load file!</h1>
-	</body>
-	<div id="downloadForm">
-		<form method="post" enctype="multipart/form-data" action="/upload" id="uploadForm">
-			<input type="file" name="file" accept=".csv" id="uploadChoise"> </br>
-			<input type="submit" value="Press to Upload!" id="uploadAction">
-		</form>
-	</div>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+<title>CSV parser</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<link rel="stylesheet" th:href="@{/style.css}" />
+</head>
+<body>
+	<h1>Load file!</h1>
+</body>
+<div id="downloadForm">
+	<form method="post" enctype="multipart/form-data" action="/upload"
+		id="uploadForm">
+		<fieldset>
+			<legend>File</legend>
+			<div class="example-1">
+				<div class="form-group">
+					<label class="label"> <i class="material-icons"></i>
+						<span class="title">Добавить файл</span> <input type="file"
+						name="file" accept=".csv" id="uploadChoise">
+					</label>
+				</div>
+			</div>
+		</fieldset>
+		<input type="image" value="Press to Upload!" id="uploadAction"
+			th:src="@{/upload.png}">
+	</form>
+</div>
 </html>
