upload to database start...

--- a/csv-simple-parser/src/main/resources/static/style.css
+++ b/csv-simple-parser/src/main/resources/static/style.css
@@ -1,37 +1,67 @@
 body {
-	background-color: #ff9966;
+	background-color: #ff9966
 }
-h1{
+.errors{
+	color: red;
+}
+h1, #errorHead{
 	color: white;
 	margin-top: 100px;
 	margin-left: 30%;
 	width: 40%;
 	font: Arial;
-	font-size: 140px;
+	font-size: 140px
 }
 
-.example-1 .form-group{padding:1em;margin:1em}
-.example-1 input[type=file]{outline:0;opacity:0}
-.example-1 .label{width:120px;border:2px dashed grey;border-radius:5px;display:block;padding:1.2em;transition:border 300ms ease;cursor:pointer;text-align:center}
-.example-1 .label i{display:block;font-size:42px;padding-bottom:16px}
-.example-1 .label i,.example-1 .label .title{color:grey;transition:200ms color}
-.example-1 .label:hover{border:2px solid #000}
-.example-1 .label:hover i,.example-1 .label:hover .title{color:#000}
-
-/*
-#uploadChoise {
-	margin-left: 40%;
-	width: 10%;
+fieldset{
+	border: solid 2px #ffffff;
+	margin-left: 30%;
+	width: 25%
+}
+#legendText{
+	border: dashed 2px #ffffff;
+	color: white;
 	font-size: 20px;
-	background-color: red;
+	margin-left: 1em;
+	margin-right: 1em;
+	padding-left: 1em;
+	padding-right: 1em;
+	padding-top: 0.5em;
+	padding-bottom: 0.5em; 
+	padding
 }
 
-#uploadAction {
-	color: red;
+#uploadAction{
+	margin-left: 30%;
 }
-
-#uploadForm {
-	border-color: white;
-	border-width: 1px;
+.example-1 .form-group{
+	padding:1em;margin:1em
 }
-*/
+.example-1 input[type=file]{
+	outline:0;opacity:0
+}
+.example-1 .label{
+	width:120px;
+	border:2px dashed red;
+	border-radius:5px;
+	display:block;
+	padding:1.2em;
+	transition:border 300ms ease;
+	cursor:pointer;
+	text-align:center
+}
+.example-1 .label i{
+	display:block;
+	font-size:42px;
+	padding-bottom:16px
+}
+.example-1 .label i,.example-1 .label .title{
+	color:white;
+	transition:200ms color
+}
+.example-1 .label:hover{
+	border:2px solid white
+}
+.example-1 .label:hover i,.example-1 .label:hover .title{
+	color:white
+}
