Save to db ok Make reports.

--- a/csv-simple-parser/src/main/resources/static/style.css
+++ b/csv-simple-parser/src/main/resources/static/style.css
@@ -10,13 +10,14 @@ h1, #errorHead{
 	margin-left: 30%;
 	width: 40%;
 	font: Arial;
-	font-size: 140px
+	font-size: 120px;
 }
 
 fieldset{
 	border: solid 2px #ffffff;
 	margin-left: 30%;
-	width: 25%
+	width: 25%;
+	align-content: center
 }
 #legendText{
 	border: dashed 2px #ffffff;
@@ -27,13 +28,18 @@ fieldset{
 	padding-left: 1em;
 	padding-right: 1em;
 	padding-top: 0.5em;
-	padding-bottom: 0.5em; 
-	padding
+	padding-bottom: 0.5em 
 }
 
 #uploadAction{
 	margin-left: 30%;
 }
+
+#successText{
+	color: #39ac73;
+	font-size: 20px
+}
+
 .example-1 .form-group{
 	padding:1em;margin:1em
 }
