--- a/csv-simple-parser/src/main/resources/templates/error.html
+++ b/csv-simple-parser/src/main/resources/templates/error.html
@@ -9,5 +9,6 @@
 <body class="errors">
 	<h1 id="errorHead">ERROR PAGE!!!</h1>
 	<h2 style="margin-left: 30%">Something going wrong!</h2>
+	<h3 style="margin-left: 30%" th:text="${ErrorMessage}">Text</h3>
 </body>
 </html>
