--- a/csv-simple-parser/src/main/resources/templates/error.html
+++ b/csv-simple-parser/src/main/resources/templates/error.html
@@ -2,11 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>CSV parser</title>
-<script type="text/javascript" th:src="@{/jquery.js}"></script>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" th:href="@{/style.css}" />
 </head>
 <body class="errors">
+	<div th:replace="~{common::home}"></div>
 	<h1 id="errorHead">ERROR PAGE!!!</h1>
 	<h2 style="margin-left: 30%">Something going wrong!</h2>
 	<h3 style="margin-left: 30%" th:text="${ErrorMessage}">Text</h3>
