--- a/csv-simple-parser/src/main/resources/templates/common.html
+++ b/csv-simple-parser/src/main/resources/templates/common.html
@@ -17,7 +17,7 @@
 		</div>
 		<div class="home">
 			<p>
-				<a href="/" title="Go to home page!" class="hometext"><img
+				<a th:href="@{/}" title="Go to home page!" class="hometext"><img
 					th:src="@{home.png}">Home page</a>
 			</p>
 		</div>
